--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
                    <h1>SEDANS</h1>
                    <p>Choose a sedan for its affardability and excellent fuel economy. Ideal for cruising in the city or on your next road trip.</p>
                    <!-- btn -->
-                   <a href="grid.html" class="btn btn_1">
-                       <button type="button">Read More</button>
-                   </a>
+                    <div class="btn btn_1">
+                        <button type="button">Read More</button>
+                    </div>
                </div>
                <div class="colunms colunm_card2">
                    <div class="logo">
@@ -37,9 +37,9 @@
                    <h1>SUVS</h1>
                    <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures.</p>
                     <!-- btn -->
-                    <a href="grid.html" class="btn btn_2">
+                    <div class="btn btn_2">
                         <button type="button">Read More</button>
-                    </a>
+                    </div>
                </div>
                <div class="colunms colunm_card3">
                    <div class="logo">
@@ -48,11 +48,15 @@
                    <h1>LUXURY</h1>
                    <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.</p>
                    <!-- btn -->
-                   <a href="grid.html" class="btn btn_3">
-                      <button type="button">Read More</button>
-                  </a>
+                    <div class="btn btn_3">
+                        <button type="button">Read More</button>
+                    </div>
                </div>
             </div>
+            <!-- description btn -->
+            <a href="grid.html">
+                <button class="des_btn" type="button">FlexBox</button>
+            </a>
         </div>
     </div>
    
