--- a/grid.html
+++ b/grid.html
@@ -56,9 +56,9 @@
                 </div>
             </main>
             <!-- description btn -->
-            <a href="index.html">
+            <!-- <a href="index.html">
                 <button class="descp_btn" type="button">Grid</button>
-            </a>
+            </a> -->
         </div>
     </div>
     
