--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
                </div>
             </div>
             <!-- description btn -->
-            <a href="grid.html">
+            <!-- <a href="grid.html">
                 <button class="des_btn" type="button">FlexBox</button>
-            </a>
+            </a> -->
         </div>
     </div>
    
